<resources xmlns:tools="http://schemas.android.com/tools" tools:ignore="MissingTranslation">
    <string name="app_lightning" translatable="false">Lightning</string>
    <string name="ytdl_package_name" translatable="false">com.cookiejarapps.smartcookieweb_ytdl</string>
    <string name="app_desc">A free and open source web browser that blocks ads and trackers</string>
    <string name="action_new_tab">New tab</string>
    <string name="action_share">Share</string>
    <string name="action_print">Print</string>
    <string name="action_history">History</string>
    <string name="action_bookmarks">Bookmarks</string>
    <string name="action_downloads">Downloads</string>
    <string name="action_add_bookmark">Add bookmark</string>
    <string name="action_copy">Copy link</string>
    <string name="action_forward">Forward</string>
    <string name="action_sort">Sort</string>
    <string name="settings">Settings</string>
    <string name="location">Location access</string>
    <string name="password">Save your passwords</string>
    <string name="agent">User agent</string>
    <string name="flash">Enable Adobe Flash</string>
    <string name="home">Homepage</string>
    <string name="fullscreen">Hide URL bar while scrolling</string>
    <string name="java">Enable JavaScript</string>
    <string name="download">Download location</string>
    <string name="settings_advanced">Advanced settings</string>
    <string name="settings_advanced_explain">URL box contents, rendering mode, text encoding&#8230;</string>
    <string name="apache">Apache License 2.0</string>
    <string name="version">Application version</string>
    <string name="cache">Clear cache on exit</string>
    <string name="reflow">Enable text reflow</string>
    <string name="block">Block images</string>
    <string name="window">Allow sites to open new windows</string>
    <string name="cookies">Enable cookies</string>
    <string name="importbookmarks">Import bookmarks from browser</string>
    <string name="size">Text size</string>
    <string name="recommended">Recommended</string>
    <string name="search">Search engine</string>
    <string name="search_hint">Search or enter web address</string>
    <string name="wideViewPort">Use wide viewport</string>
    <string name="overViewMode">Load pages in overview mode</string>
    <string name="restore">Restore tabs on start</string>
    <string name="supported_browsers_title">Supported browsers</string>
    <string name="stock_browser">Stock browser</string>
    <string name="stock_browser_unavailable">No stock browser detected</string>
    <string name="stock_browser_available">Supported stock browser detected</string>
    <string name="fullScreenOption">Hide status bar while browsing</string>
    <string name="clear_cookies">Clear browser cookies</string>
    <string name="clear_history">Clear browser history</string>
    <string name="dialog_image">What would you like to do with this image?</string>
    <string name="action_download">Download</string>
    <string name="action_open">Open</string>
    <string name="dialog_link">What would you like to do with this link?</string>
    <string name="dialog_title_share">Share this page</string>
    <string name="dialog_history_long_press">What would you like to do with this history item?</string>
    <string name="dialog_bookmark">What would you like to do with this bookmark?</string>
    <string name="action_delete">Delete</string>
    <string name="action_blank">Blank page</string>
    <string name="agent_default">Default</string>
    <string name="agent_desktop">Desktop</string>
    <string name="agent_mobile">Mobile</string>
    <string name="agent_custom">Custom</string>
    <string name="title_search_engine">Search engine</string>
    <string name="action_ok">OK</string>
    <string name="dialog_download">Do you want to download this file? (%1$s)</string>
    <string name="unknown_size">Unknown size</string>
    <string name="action_cancel">Cancel</string>
    <string name="title_warning">Warning</string>
    <string name="dialog_adobe_not_installed">Adobe Flash Player is not installed.\nPlease install Flash Player.</string>
    <string name="title_user_agent">User agent</string>
    <string name="title_download_location">Download location</string>
    <string name="download_failed">Download failed with error:</string>
    <string name="download_successful">Download successful</string>
    <string name="title_custom_homepage">Custom homepage</string>
    <string name="action_webpage">Webpage</string>
    <string name="title_clear_history">Clear history</string>
    <string name="title_clear_cookies">Clear cookies</string>
    <string name="dialog_history">Would you like to clear your browser history?</string>
    <string name="dialog_cookies">Would you like to clear your browser cookies?</string>
    <string name="action_yes">Yes</string>
    <string name="action_no">No</string>
    <string name="title_text_size">Text size</string>
    <string name="size_largest">Largest</string>
    <string name="size_large">Large</string>
    <string name="size_normal">Normal</string>
    <string name="size_small">Small</string>
    <string name="size_smallest">Smallest</string>
    <string name="title_error">Error</string>
    <string name="dialog_import_error">No browser was detected to import bookmarks from.</string>
    <string name="hint_title">Title</string>
    <string name="hint_url">URL</string>
    <string name="title_edit_bookmark">Edit bookmark</string>
    <string name="action_edit">Edit</string>
    <string name="action_incognito">New private tab</string>
    <string name="action_homepage">Default</string>
    <string name="action_back">Back</string>
    <string name="action_find">Find in page</string>
    <string name="download_pending">Starting download\u2026</string>
    <string name="cannot_download">Can only download HTTP or HTTPS URLs.</string>
    <string name="problem_download">Invalid URL encountered, cannot download</string>
    <string name="problem_location_download">Cannot download to the specified location</string>
    <string name="download_no_sdcard_dlg_title">No SD card</string>
    <string name="download_no_sdcard_dlg_msg">USB storage is required to download the file.</string>
    <string name="download_sdcard_busy_dlg_title">USB storage unavailable</string>
    <string name="incognito_cookies">Enable cookies in private tabs</string>
    <string name="clear_cache">Clear cache</string>
    <string name="licenses">Open Source Licenses</string>
    <string name="search_suggestions">Search suggestions</string>
    <string name="http_proxy">HTTP proxy</string>
    <string name="clear_cookies_exit">Clear cookies on exit</string>
    <string name="clear_history_exit">Clear history on exit</string>
    <string name="mpl_license">Mozilla Public License 2.0</string>
    <string name="android_open_source_project">Android Open Source Project</string>
    <string name="hphosts_ad_server_list">Steven Black\'s Ad Hosts List</string>
    <string name="rendering_mode">Rendering mode</string>
    <string name="library_netcipher">NetCipher</string>
    <string name="license_gnu">GNU Lesser General Public License</string>
    <string name="export_bookmarks">Export bookmarks to backup</string>
    <string name="import_backup">Import bookmarks from backup</string>
    <string name="export_tabs">Export tabs to backup</string>
    <string name="bookmark_settings">Bookmark settings</string>
    <string name="settings_bookmark_explain">Exporting and importing&#8230;</string>
    <string name="settings_general">General settings</string>
    <string name="settings_general_explain">Search engine, proxy, color mode&#8230;</string>
    <string name="settings_display">Display settings</string>
    <string name="settings_display_explain">Full screen mode, homepage, themes&#8230;</string>
    <string name="settings_privacy">Privacy and security settings</string>
    <string name="settings_privacy_explain">Cache, cookies, history&#8230;</string>
    <string name="settings_about">About</string>
    <string name="settings_about_explain">Version number, author and licenses&#8230;</string>
    <string name="third_party">Block 3rd party cookies</string>
    <string name="color_mode">Enable color mode</string>
    <string name="reading_mode">Reading mode</string>
    <string name="snacktory">Snacktory</string>
    <string name="jsoup">jsoup: Java HTML Parser</string>
    <string name="mit_license">MIT License</string>
    <string name="url_contents">URL box contents</string>
    <string name="text_encoding">Text encoding</string>
    <string name="settings_black_status_bar">Black status bar</string>
    <string name="theme">App theme</string>
    <string name="clear_web_storage">Clear web storage</string>
    <string name="clear_web_storage_exit">Clear web storage on exit</string>
    <string name="tabs_in_drawer">Show tabs in drawer</string>
    <string name="swap_bookmarks_and_tabs">Swap bookmark and tab drawers</string>
    <string name="do_not_track">Request \'Do Not Track\'</string>
    <string name="remove_identifying_headers">Remove identifying HTTP headers</string>
    <string name="action_delete_all_bookmarks">Delete all bookmarks</string>
    <string name="scw">SmartCookieWeb Source Code</string>
    <string name="faq">FAQ</string>
    <string name="faq_description">Frequently asked questions...</string>
    <string name="webrtc_support">Allow WebRTC permission requests</string>
    <string name="save_data">Request \'Save-Data\'</string>
    <string name="privacy">View Privacy Policy</string>
    <string name="privacy_info">Read the SmartCookieWeb privacy policy</string>
    <string name="url_project" translatable="false">https://github.com/CookieJarApps/SmartCookieWeb</string>
    <string name="block_malware">Block malicious sites</string>
    <string name="startpage">Apply theme to homepage</string>
    <string name="forcehttps">Block non-HTTPS sites</string>
    <string name="preferhttps">Prefer HTTPS site versions</string>
    <string name="forcehttpsdesc">Only load HTTPS sites</string>
    <string name="preferhttpsdesc">Always use HTTPS on supported sites</string>
    <string name="new_tab_foreground">Bring tabs to foreground</string>
    <string name="new_tab_foreground_summary">Open a new tab when it is created</string>
    <string name="image_url">Set a homepage background image</string>
    <string name="start_incognito">Always act like private mode</string>
    <string name="bottom_navbar">Move the navbar to the bottom</string>
    <string name="export_settings">Export settings to backup</string>
    <string name="import_settings">Import settings from backup</string>
    <string name="clear_settings">Reset settings</string>
    <string name="backup_settings">Settings backup</string>
    <string name="backup_bookmarks">Bookmarks backup</string>
    <string name="backup_tabs">Tabs backup</string>
    <string name="force_zoom">Override website zoom block</string>
    <string name="navbar_col">Set navbar color</string>
    <string name="suggest">Choose number of search suggestions</string>
    <string name="more">More Info</string>
    <string name="block_intent">Handle all clicked links within this browser</string>
    <string name="block_intent_summary">Blocks prompt to open links in external applications</string>
    <string name="drawer_lines">Max text lines in drawer</string>
    <string name="drawer_size">Drawer text size</string>
    <string name="show_shortcuts">Show shortcuts on homepage</string>
    <string name="show_second_bar">Show secondary navigation bar</string>
    <string name="drawer_settings">Drawer settings</string>
    <string name="drawer_item_offset">Drawer item offset</string>
    <string name="stack_items_reverse">Stack items from bottom of drawer</string>
</resources>