<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">

    <PreferenceCategory android:title="@string/settings_privacy">
        <SwitchPreference
            android:defaultValue="true"
            android:key="location"
            android:singleLineTitle="false"
            android:title="@string/location"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="third_party"
            android:singleLineTitle="false"
            android:title="@string/third_party"/>
        <SwitchPreference
            android:defaultValue="true"
            android:key="password"
            android:singleLineTitle="false"
            android:summary="@string/recommended"
            android:title="@string/password"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="do_not_track"
            android:singleLineTitle="false"
            android:title="@string/do_not_track"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="prefer_https"
            android:singleLineTitle="false"
            android:summary="@string/preferhttpsdesc"
            android:title="@string/preferhttps"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="force_https"
            android:singleLineTitle="false"
            android:summary="@string/forcehttpsdesc"
            android:title="@string/forcehttps"/>
        <SwitchPreference
            android:defaultValue="false"
            android:singleLineTitle="false"
            android:key="remove_identifying_headers"
            android:title="@string/remove_identifying_headers"/>
        <SwitchPreference
            android:defaultValue="true"
            android:singleLineTitle="false"
            android:key="block_malicious_sites"
            android:title="@string/block_malware"/>
        <SwitchPreference
            android:defaultValue="false"
            android:singleLineTitle="false"
            android:key="webrtc_support"
            android:title="@string/webrtc_support"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="start_incognito"
            android:singleLineTitle="false"
            android:title="@string/start_incognito"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="clear_cache_exit"
            android:singleLineTitle="false"
            android:title="@string/cache"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="clear_history_exit"
            android:singleLineTitle="false"
            android:title="@string/clear_history_exit"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="clear_cookies_exit"
            android:singleLineTitle="false"
            android:title="@string/clear_cookies_exit"/>
        <SwitchPreference
            android:defaultValue="false"
            android:key="clear_webstorage_exit"
            android:singleLineTitle="false"
            android:title="@string/clear_web_storage_exit"/>
        <Preference
            android:key="clear_cache"
            android:singleLineTitle="false"
            android:title="@string/clear_cache"/>
        <Preference
            android:key="clear_history"
            android:singleLineTitle="false"
            android:title="@string/clear_history"/>
        <Preference
            android:key="clear_cookies"
            android:singleLineTitle="false"
            android:title="@string/clear_cookies"/>
        <Preference
            android:key="clear_webstorage"
            android:singleLineTitle="false"
            android:title="@string/clear_web_storage"/>
    </PreferenceCategory>
</PreferenceScreen>