<?xml version="1.0" encoding="utf-8"?>
<PreferenceScreen xmlns:android="http://schemas.android.com/apk/res/android">
    <PreferenceCategory android:title="@string/theme">
        <Preference
            android:key="app_theme"
            android:singleLineTitle="false"
            android:title="@string/theme"/>
        <Preference
            android:key="navbar_col"
            android:singleLineTitle="false"
            android:title="@string/navbar_col"/>
        <SwitchPreference
            android:defaultValue="false"
            android:singleLineTitle="false"
            android:key="black_status_bar"
            android:title="@string/settings_black_status_bar"/>
        <SwitchPreference
            android:defaultValue="true"
            android:singleLineTitle="false"
            android:key="startpage_theme"
            android:title="@string/startpage"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/home">
        <Preference
            android:key="image_url"
            android:title="@string/image_url"/>
        <SwitchPreference
            android:defaultValue="true"
            android:singleLineTitle="false"
            android:key="show_shortcuts"
            android:title="@string/show_shortcuts"/>
    </PreferenceCategory>
    <PreferenceCategory android:title="@string/settings_display">
        <SwitchPreference
            android:defaultValue="false"
            android:singleLineTitle="false"
            android:key="second_bar"
            android:title="@string/show_second_bar" />
        <SwitchPreference
            android:defaultValue="true"
            android:singleLineTitle="false"
            android:key="cb_drawertabs"
            android:title="@string/tabs_in_drawer"/>
        <SwitchPreference
            android:defaultValue="true"
            android:singleLineTitle="false"
            android:key="cb_swapdrawers"
            android:title="@string/swap_bookmarks_and_tabs"/>
        <SwitchPreference
            android:defaultValue="false"
            android:singleLineTitle="false"
            android:key="fullScreenOption"
            android:title="@string/fullScreenOption"/>
        <SwitchPreference
            android:defaultValue="false"
            android:singleLineTitle="false"
            android:key="fullscreen"
            android:title="@string/fullscreen"/>
        <SwitchPreference
            android:defaultValue="false"
            android:singleLineTitle="false"
            android:key="bottom_bar"
            android:title="@string/bottom_navbar"/>
        <SwitchPreference
            android:defaultValue="true"
            android:singleLineTitle="false"
            android:key="wideViewPort"
            android:summary="@string/recommended"
            android:title="@string/wideViewPort"/>
        <SwitchPreference
            android:defaultValue="true"
            android:singleLineTitle="false"
            android:key="overViewMode"
            android:summary="@string/recommended"
            android:title="@string/overViewMode"/>
        <SwitchPreference
            android:defaultValue="false"
            android:singleLineTitle="false"
            android:key="text_reflow"
            android:title="@string/reflow"/>
      <!--  <SwitchPreference
            android:defaultValue="false"
            android:singleLineTitle="false"
            android:key="show_extra"
            android:title="@string/show_extra"/> -->
        <SwitchPreference
            android:defaultValue="true"
            android:singleLineTitle="false"
            android:key="new_tabs_foreground"
            android:title="@string/new_tab_foreground"
            android:summary="@string/new_tab_foreground_summary"/>
       <!-- <SwitchPreference
            android:defaultValue="true"
            android:key="show_whats_new"
            android:title="@string/whats_new"/>-->
        <Preference
            android:key="text_size"
            android:singleLineTitle="false"
            android:title="@string/title_text_size"/>
        <Preference
            android:key="drawer_lines"
            android:singleLineTitle="false"
            android:title="@string/drawer_lines"/>
        <Preference
            android:key="drawer_size"
            android:singleLineTitle="false"
            android:title="@string/drawer_size"/>
    </PreferenceCategory>

</PreferenceScreen>