<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android" >

    <item
        android:id="@+id/action_new_tab"
        android:icon="@drawable/ic_action_plus"
        android:title="@string/action_new_tab"/>
    <item
        android:icon="@drawable/ic_share_black_24dp"
        android:id="@+id/action_share"
        android:title="@string/action_share"/>
    <item
        android:id="@+id/action_find"
        android:icon="@drawable/ic_search"
        android:title="@string/action_find"/>
    <item
        android:id="@+id/action_history"
        android:icon="@drawable/ic_history"
        android:title="@string/action_history"/>
    <item
        android:id="@+id/action_bookmarks"
        android:icon="@drawable/ic_bookmark"
        android:title="@string/action_bookmarks"/>
    
    <item
        android:id="@+id/action_reading_mode"
        android:icon="@drawable/ic_action_reading"
        android:title="@string/reading_mode"/>

</menu>